--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,5 @@
 {
     "files.associations": {
-        "array": "cpp",
-        "functional": "cpp",
-        "istream": "cpp",
-        "ostream": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "string_view": "cpp",
-        "initializer_list": "cpp",
         "__bit_reference": "cpp",
         "__config": "cpp",
         "__debug": "cpp",
@@ -24,6 +15,7 @@
         "__threading_support": "cpp",
         "__tuple": "cpp",
         "algorithm": "cpp",
+        "array": "cpp",
         "atomic": "cpp",
         "bitset": "cpp",
         "cctype": "cpp",
@@ -41,26 +33,34 @@
         "cwctype": "cpp",
         "exception": "cpp",
         "optional": "cpp",
-        "fstream": "cpp",
+        "functional": "cpp",
+        "initializer_list": "cpp",
         "ios": "cpp",
         "iosfwd": "cpp",
         "iostream": "cpp",
+        "istream": "cpp",
         "iterator": "cpp",
         "limits": "cpp",
         "locale": "cpp",
         "memory": "cpp",
         "mutex": "cpp",
         "new": "cpp",
-        "numeric": "cpp",
-        "random": "cpp",
+        "ostream": "cpp",
         "ratio": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "string": "cpp",
+        "string_view": "cpp",
         "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
         "typeinfo": "cpp",
         "unordered_map": "cpp",
-        "vector": "cpp"
+        "utility": "cpp",
+        "vector": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "fstream": "cpp"
     }
 }
