Refactored codebase; Added comments to Game.h

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,11 @@
         "vector": "cpp",
         "numeric": "cpp",
         "random": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "*.tcc": "cpp",
+        "clocale": "cpp",
+        "deque": "cpp",
+        "memory_resource": "cpp",
+        "cinttypes": "cpp"
     }
 }
